update requirements and file paths

--- a/notebooks/test_book.ipynb
+++ b/notebooks/test_book.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4065b4d2",
+   "id": "40419733",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80c43626",
+   "id": "2390c588",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22c39302",
+   "id": "abee566b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e79cde0",
+   "id": "747a84a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "745bf501",
+   "id": "dcd2d7ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef5f6991",
+   "id": "22da530a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a13e3eec",
+   "id": "934c2af5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,33 +92,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "58e1fcf8",
+   "execution_count": 32,
+   "id": "71a98a2f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prediction results:\n",
-      "annotation_spec_id: \"1846984921105563648\"\n",
-      "image_object_detection {\n",
-      "  bounding_box {\n",
-      "    normalized_vertices {\n",
-      "      x: 0.3524951636791229\n",
-      "      y: 0.5973330140113831\n",
-      "    }\n",
-      "    normalized_vertices {\n",
-      "      x: 0.6731520295143127\n",
-      "      y: 0.7241261601448059\n",
-      "    }\n",
-      "  }\n",
-      "  score: 0.9997082352638245\n",
-      "}\n",
-      "display_name: \"licence\"\n",
-      "\n",
-      "height: 1500\n",
-      "width: 2395\n"
+      "[x: 0.3524951636791229\n",
+      "y: 0.5973330140113831\n",
+      ", x: 0.6731520295143127\n",
+      "y: 0.7241261601448059\n",
+      "]\n"
      ]
     }
    ],
@@ -185,9 +171,9 @@
     "request = automl.PredictRequest(name=model_full_id, payload=payload, params=params)\n",
     "response = prediction_client.predict(request=request)\n",
     "\n",
-    "print(\"Prediction results:\")\n",
-    "for result in response.payload:\n",
-    "    print (result)\n",
+    "# print(\"Prediction results:\")\n",
+    "# for result in response.payload:\n",
+    "#     print (result)\n",
     "#     print(\"Predicted class name: {}\".format(result.display_name))\n",
     "#     print(\"Predicted class score: {}\".format(result.classification.score))\n",
     " \n",
@@ -198,17 +184,18 @@
     "height = img.shape[0]\n",
     "width = img.shape[1]\n",
     "\n",
-    "print (\"height: \" + str(height))\n",
-    "print (\"width: \" + str(width))\n",
+    "# print (\"height: \" + str(height))\n",
+    "# print (\"width: \" + str(width))\n",
     "\n",
     "\n",
-    "vertices = list(result.image_object_detection.bounding_box.normalized_vertices)\n"
+    "vertices = list(result.image_object_detection.bounding_box.normalized_vertices)\n",
+    "print (vertices)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "57b34091",
+   "execution_count": 26,
+   "id": "8fcf2d81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,17 +207,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "3ebec97d",
+   "execution_count": 27,
+   "id": "24664803",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fdfa6f35590>"
+       "<matplotlib.image.AxesImage at 0x7fdf941e78d0>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -253,8 +240,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "8982c4d7",
+   "execution_count": 28,
+   "id": "72c34cfe",
    "metadata": {},
    "outputs": [
     {
@@ -271,17 +258,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "adf1f017",
+   "execution_count": 29,
+   "id": "ec001487",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fdf943ebe50>"
+       "<matplotlib.image.AxesImage at 0x7fdf94060450>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -305,8 +292,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "e9f3131d",
+   "execution_count": 30,
+   "id": "4355a2ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,8 +304,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "97bcb507",
+   "execution_count": 31,
+   "id": "ddc9682f",
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a9ffd82",
+   "id": "c7cf60ae",
    "metadata": {},
    "outputs": [],
    "source": []
